--- a/ml/kaggle/code/titanic/titanic.ipynb
+++ b/ml/kaggle/code/titanic/titanic.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 简介\n",
-    "Kaggle 泰坦尼克 Tutorial。\n",
-    "参考 [Titanic Data Science Solutions](http://localhost:8888/notebooks/Kaggle%20Titanic.ipynb)。"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,9 +24,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4rc1"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
